--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>ierp-server</module>
+        <module>ierp-common</module>
     </modules>
     <packaging>pom</packaging>
 
