--- a/ierp-services/pom.xml
+++ b/ierp-services/pom.xml
@@ -2,33 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>ierp-springcloud</artifactId>
+        <groupId>com.easy</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.easy</groupId>
-    <artifactId>ierp-springcloud</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>ierp-server</module>
-        <module>ierp-common</module>
-        <module>ierp-client</module>
-        <module>ierp-services</module>
-    </modules>
+    <artifactId>ierp-services</artifactId>
     <packaging>pom</packaging>
-
-    <!-- 统一管理jar包版本 -->
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <junit.version>4.12</junit.version>
-        <log4j.version>1.2.17</log4j.version>
-        <lombok.version>1.18.12</lombok.version>
-        <mysql.version>5.1.47</mysql.version>
-        <druid.version>1.1.12</druid.version>
-        <mybatis.spring.boot.version>2.1.2</mybatis.spring.boot.version>
-        <fastjson.version>1.2.72</fastjson.version>
-    </properties>
-
+    <modules>
+        <module>ierp-test</module>
+    </modules>
 
     <!-- 子模块继承之后，提供作用：锁定版本+子modlue不用写groupId和version  -->
     <dependencyManagement>
@@ -94,17 +79,5 @@
         </dependencies>
     </dependencyManagement>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <fork>true</fork>
-                    <addResources>true</addResources>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
