--- a/ierp-client/src/main/resources/bootstrap.yml
+++ b/ierp-client/src/main/resources/bootstrap.yml
@@ -1,8 +1,16 @@
 server:
   port: 80
+
+spring:
+  application:
+    name: ierp-client
+
 eureka:
   client:
-    register-with-eureka: false
+    #表示是否将自己注册进EurekaServer 默认为true
+    register-with-eureka: true
+      # 是否从EurekaServer 抓取已有的注册信息 默认为true  单节点无所谓，集群必须设置为true 才能配合ribbon使用负载均衡
+    fetchRegistry: true
     service-url:
       defaultZone: http://ierp-server:7001/eureka
   instance:
@@ -22,11 +30,11 @@ feign:
   #因为openFeign 默认等待时间为1秒钟(如果响应时间超过1秒钟会报错)  如果有业务需要 等待调用时间超过1秒钟  在这里进行设置  这样就不会报错
 ribbon:
   #指的是建立连接所用的时间，适用于网络状况正常的情况下，两端连接所用的时间
-  ReadTimeout:  5000
+  ReadTimeout:  30000
   #指的是建立连接后从服务器读取到可用资源所用的时间
-  ConnectTimeout: 5000
+  ConnectTimeout: 30000
 
 logging:
   level:
-    com.atguigu.springcloud.service.PaymentFeignService: debug  #openFeign这里设置那个接口 什么级别的日志
+    com.easy.service.SchoolService: debug  #openFeign这里设置那个接口 什么级别的日志
 
