--- a/ierp-services/pom.xml
+++ b/ierp-services/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>ierp-test</module>
+        <module>ierp-hystrix-dashboard</module>
     </modules>
 
     <!-- 子模块继承之后，提供作用：锁定版本+子modlue不用写groupId和version  -->
