--- a/ierp-common/pom.xml
+++ b/ierp-common/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>hutool-all</artifactId>
             <version>5.3.10</version>
         </dependency>
+<!--        文档-->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-micro-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
