--- a/ierp-client/src/main/resources/bootstrap.yml
+++ b/ierp-client/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
 server:
-  port: 80
+  port: 8006
 
 spring:
   application:
@@ -37,4 +37,5 @@ ribbon:
 logging:
   level:
     com.easy.service.SchoolService: debug  #openFeign这里设置那个接口 什么级别的日志
+    com.easy.service.SysUserService: debug  #openFeign这里设置那个接口 什么级别的日志
 
