--- a/ierp-services/ierp-test/pom.xml
+++ b/ierp-services/ierp-test/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
         <dependency>
             <groupId>com.alibaba</groupId>
