--- a/ierp-services/ierp-test/src/main/resources/application.yml
+++ b/ierp-services/ierp-test/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8001
+  port: 8007
 
 spring:
   application:
@@ -7,7 +7,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://localhost:3306/ierp-springcloud-test?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/ierp-springcloud?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: root
 
@@ -30,7 +30,11 @@ eureka:
 #    lease-renewal-interval-in-seconds:  1
 #    #Eureka 服务端在收到最后一次心跳后等待时间上限 单位为秒 默认为90秒 ，超时将剔除服务
 #    lease-expiration-duration-in-seconds:  2
-
+ribbon:
+  #指的是建立连接所用的时间，适用于网络状况正常的情况下，两端连接所用的时间
+  ReadTimeout:  30000
+  #指的是建立连接后从服务器读取到可用资源所用的时间
+  ConnectTimeout: 30000
 
 
 
